Source/Core/Source/Drivers/include/ri1260.h

/*= GLOBAL FUNCTION DECLARATIONS ============================================*/

ViStatus _VI_FUNC ri1260_init (ViRsrc rsrcName, ViBoolean IDQuery,
    ViBoolean reset, ViPSession vi);
ViStatus _VI_FUNC ri1260_close (ViSession vi);
ViStatus _VI_FUNC ri1260_reset (ViSession vi);
ViStatus _VI_FUNC ri1260_revision_query (ViSession vi, ViString driver_rev,
    ViString instr_rev);
ViStatus _VI_FUNC ri1260_self_test (ViSession vi, ViPInt16 test_result,
    ViString test_message);
ViStatus _VI_FUNC ri1260_error_query (ViSession vi, ViPInt32 error,
    ViString error_message);
ViStatus _VI_FUNC ri1260_error_message (ViSession vi, ViStatus error,
    ViString message);
ViStatus _VI_FUNC ri1260_configure (ViSession vi, ViInt16 conf_test,
    ViInt16 sync_out_delay, ViInt16 sync_line, ViInt16 trig_line,
    ViInt16 pow_up_recall);
ViStatus _VI_FUNC ri1260_set_switch_sequence (ViSession vi, ViInt16 module,
    ViInt16 switch_seq);
ViStatus _VI_FUNC ri1260_store_recall_setup (ViSession vi,
    ViInt16 store_or_recall, ViInt16 mem_num);
ViStatus _VI_FUNC ri1260_scan_control (ViSession vi, ViInt16 action);
ViStatus _VI_FUNC ri1260_intr_control (ViSession vi, ViInt16 scan_list_break,
    ViInt16 ready);
ViStatus _VI_FUNC ri1260_def_scan_list (ViSession vi, ViString scan_list);
ViStatus _VI_FUNC ri1260_def_excl_list (ViSession vi, ViString excl_list);
ViStatus _VI_FUNC ri1260_def_equate_list (ViSession vi, ViString equate_list);
ViStatus _VI_FUNC ri1260_operate_multiple (ViSession vi, ViInt16 module_no,
    ViAInt16 states);
ViStatus _VI_FUNC ri1260_12_operate_single(ViSession vi, ViInt16 module_no,
    ViInt16 operation, ViInt16 relay);
ViStatus _VI_FUNC ri1260_13_operate_single(ViSession vi, ViInt16 module_no,
    ViInt16 operation, ViInt16 relay);
ViStatus _VI_FUNC ri1260_16_operate_single(ViSession vi, ViInt16 module_no,
    ViInt16 operation, ViInt16 relay);
ViStatus _VI_FUNC ri1260_17_operate_single(ViSession vi, ViInt16 module_no,
    ViInt16 operation, ViInt16 relay);
ViStatus _VI_FUNC ri1260_18_operate_single(ViSession vi, ViInt16 module_no,
    ViInt16 operation, ViInt16 relay);
ViStatus _VI_FUNC ri1260_20_operate_single(ViSession vi, ViInt16 module_no,
    ViInt16 operation, ViInt16 relay);
ViStatus _VI_FUNC ri1260_30_operate_single(ViSession vi, ViInt16 module,
    ViInt16 operation, ViInt16 group, ViInt16 relay);
ViStatus _VI_FUNC ri1260_35_operate_single(ViSession vi, ViInt16 module,
    ViInt16 operation, ViInt16 relay);
ViStatus _VI_FUNC ri1260_36_operate_single (ViSession vi, ViInt16 module,
    ViInt16 operation, ViInt16 mux, ViInt16 relay);
ViStatus _VI_FUNC ri1260_37_operate_single(ViSession vi, ViInt16 module,
    ViInt16 operation, ViInt16 group, ViInt16 relay);
ViStatus _VI_FUNC ri1260_38_operate_single(ViSession vi, ViInt16 module,
    ViInt16 operation, ViInt16 interconnect, ViInt16 mux, ViInt16 channel);
ViStatus _VI_FUNC ri1260_39_operate_single(ViSession vi, ViInt16 module,
    ViInt16 operation, ViInt16 relay_type, ViInt16 channel);
ViStatus _VI_FUNC ri1260_40_operate_single(ViSession vi, ViInt16 module,
    ViInt16 operation, ViInt16 matrix, ViInt16 row, ViInt16 column);
ViStatus _VI_FUNC ri1260_45_operate_single(ViSession vi, ViInt16 module,
    ViInt16 operation, ViInt16 matrix, ViInt16 row, ViInt16 column);
ViStatus _VI_FUNC ri1260_50_operate_single (ViSession vi, ViInt16 module,
    ViInt16 operation, ViInt16 grp, ViInt16 relay);
   
    
    
ViStatus _VI_FUNC ri1260_54_operate_single(ViSession vi, ViInt16 module,
    ViInt16 operation, ViInt16 mux, ViInt16 relay);
ViStatus _VI_FUNC ri1260_58_operate_single (ViSession instrHandle, ViInt16 moduleAddress,
                                   ViInt16 operation, ViInt16 MUXNumber,
                                   ViInt16 relayNumber);
ViStatus _VI_FUNC ri1260_59_operate_single(ViSession vi, ViInt16 module,
    ViInt16 operation, ViInt16 mux, ViInt16 relay);
ViStatus _VI_FUNC ri1260_60_operate_single (ViSession vi, ViInt16 module,
    ViInt16 operation, ViInt16 grp, ViInt16 relay);
ViStatus _VI_FUNC ri1260_64_operate_single (ViSession vi, ViInt16 module,
    ViInt16 operation, ViInt16 grp, ViInt16 relay);
ViStatus _VI_FUNC ri1260_66_operate_single (ViSession vi, ViInt16 module,
    ViInt16 operation, ViInt16 grp, ViInt16 relay);
ViStatus _VI_FUNC ri1260_75_operate_single (ViSession vi, ViInt16 module,
    ViInt16 operation, ViInt16 grp, ViInt16 relay);
ViStatus _VI_FUNC ri1260_93_operate_single (ViSession vi, ViInt16 module,
    ViInt16 operation, ViInt16 grp, ViInt16 relay);
ViStatus _VI_FUNC ri1260_read_status_byte (ViSession vi, ViPInt16 response);
ViStatus _VI_FUNC ri1260_read_relay_states (ViSession vi, ViInt16 module_no,
    ViPInt16 mod_type, ViAInt16 states);
ViStatus _VI_FUNC ri1260_read_card_types(ViSession vi, ViAInt16 module_type);
ViStatus _VI_FUNC ri1260_def_port_modes(ViSession vi, ViInt16 module_no,
    ViInt16 port_io_bitmask);
ViStatus _VI_FUNC ri1260_set_sync_mode(ViSession vi, ViInt16 module_no,
    ViInt16 last_sync_port);
ViStatus _VI_FUNC ri1260_handshake_polarity(ViSession vi, ViInt16 module_no,
    ViInt16 clkin, ViInt16 busy);
ViStatus _VI_FUNC ri1260_read_digio_conf(ViSession vi, ViInt16 module_no,
    ViPInt16 io_bitmask, ViPInt16 last_sync_port, ViPInt16 arm_state,
    ViPInt16 clkin, ViPInt16 busy);
ViStatus _VI_FUNC ri1260_setup_sync_read(ViSession vi, ViInt16 module_no,
    ViInt16 port, ViInt16 data_length, ViInt16 max_data);
ViStatus _VI_FUNC ri1260_setup_sync_write(ViSession vi, ViInt16 module_no,
    ViInt16 port, ViInt16 data_length, ViInt16 num_data, ViAInt32 data_array);
ViStatus _VI_FUNC ri1260_arm_digio(ViSession vi, ViInt16 module_no,
    ViInt16 arm_or_disarm);
ViStatus _VI_FUNC ri1260_read_sync_data(ViSession vi, ViInt16 module_no,
    ViInt16 port, ViInt16 max_data, ViPInt16 num_read, ViAInt32 data_array);
ViStatus _VI_FUNC ri1260_async_read(ViSession vi, ViInt16 module_no,
    ViInt16 port, ViInt16 data_length, ViPInt32 data_item);
ViStatus _VI_FUNC ri1260_async_write(ViSession vi, ViInt16 module_no,
    ViInt16 port,ViInt16 data_length, ViInt32 data_item);
ViStatus _VI_FUNC ri1260_async_bit_write(ViSession vi, ViInt16 module_no,
    ViInt16 port, ViInt16 high_bits, ViInt16 low_bits);
ViStatus _VI_FUNC ri1260_run_synchronous_test (ViSession vi, ViInt16 module,
    ViInt16 test_timeout);
ViStatus _VI_FUNC ri1260_find1260 (ViInt16 max_count, ViPInt32 ret_count,
    ViAInt16 instr_type, ViAInt16 instr_num, ViAInt16 logical_address,
    ViAInt16 slot);
ViStatus _VI_FUNC ri1260_closeAllRMSessions (void);