Source/ISS/Development/SAIS/SAIS_Devices/Switch/Source/RI1260.vb


    'Declare Function ri1260_init Lib "RI1260.DLL" (ByVal rsrcName As String, ByVal IDQuery As Integer, ByVal reset_inst As Integer, Vi As Long) As Long
    'Declare Function ri1260_close Lib "RI1260.DLL" (ByVal Vi As Long) As Long
    'Declare Function ri1260_reset Lib "RI1260.DLL" (ByVal Vi As Long) As Long
    'Declare Function ri1260_revision_query Lib "RI1260.DLL" (ByVal Vi As Long, driver_rev As String, instr_rev As String) As Long
    'Declare Function ri1260_self_test Lib "RI1260.DLL" (ByVal Vi As Long, test_result As Integer, test_message As String) As Long
    'Declare Function ri1260_error_query Lib "RI1260.DLL" (ByVal Vi As Long, error_code As Long, error_message As String) As Long
    'Declare Function ri1260_error_message Lib "RI1260.DLL" (ByVal Vi As Long, error_code As Long, message As String) As Long
    'Declare Function ri1260_configure Lib "RI1260.DLL" (ByVal Vi As Long, ByVal conf_test As Integer, ByVal sync_out_delay As Integer, ByVal sync_line As Integer, ByVal trig_line As Integer, ByVal pow_up_recall As Integer) As Long
    'Declare Function ri1260_set_switch_sequence Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module As Integer, ByVal switch_seq As Integer) As Long
    'Declare Function ri1260_store_recall_setup Lib "RI1260.DLL" (ByVal Vi As Long, ByVal store_or_recall As Integer, ByVal mem_num As Integer) As Long
    'Declare Function ri1260_scan_control Lib "RI1260.DLL" (ByVal Vi As Long, ByVal action As Integer) As Long
    'Declare Function ri1260_intr_control Lib "RI1260.DLL" (ByVal Vi As Long, ByVal scan_list_break As Integer, ByVal ready As Integer) As Long
    'Declare Function ri1260_def_scan_list Lib "RI1260.DLL" (ByVal Vi As Long, ByVal scan_list As String) As Long
    'Declare Function ri1260_def_excl_list Lib "RI1260.DLL" (ByVal Vi As Long, ByVal excl_list As String) As Long
    'Declare Function ri1260_def_equate_list Lib "RI1260.DLL" (ByVal Vi As Long, ByVal equate_list As String) As Long
    'Declare Function ri1260_operate_multiple Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module_no As Integer, states As Integer) As Long
    'Declare Function ri1260_12_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module_no As Integer, ByVal operation As Integer, ByVal relay As Integer) As Long
    'Declare Function ri1260_13_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module_no As Integer, ByVal operation As Integer, ByVal relay As Integer) As Long
    'Declare Function ri1260_16_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module_no As Integer, ByVal operation As Integer, ByVal relay As Integer) As Long
    'Declare Function ri1260_17_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module_no As Integer, ByVal operation As Integer, ByVal relay As Integer) As Long
    'Declare Function ri1260_18_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module_no As Integer, ByVal operation As Integer, ByVal relay As Integer) As Long
    'Declare Function ri1260_20_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module_no As Integer, ByVal operation As Integer, ByVal relay As Integer) As Long
    'Declare Function ri1260_30_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal group As Integer, ByVal relay As Integer) As Long
    'Declare Function ri1260_35_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal relay As Integer) As Long
    'Declare Function ri1260_36_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal mux As Integer, ByVal relay As Integer) As Long
    'Declare Function ri1260_37_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal group As Integer, ByVal relay As Integer) As Long
    'Declare Function ri1260_38_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal interconnect As Integer, ByVal mux As Integer, ByVal channel As Integer) As Long
    'Declare Function ri1260_39_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal relay_type As Integer, ByVal channel As Integer) As Long
    'Declare Function ri1260_40_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal matrix As Integer, ByVal row As Integer, ByVal column As Integer) As Long
    'Declare Function ri1260_45_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal matrix As Integer, ByVal row As Integer, ByVal column As Integer) As Long
    'Declare Function ri1260_50_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal grp As Integer, ByVal relay As Integer) As Long
    'Declare Function ri1260_54_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal mux As Integer, ByVal relay As Integer) As Long
    'Declare Function ri1260_58_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal mux As Integer, ByVal relay As Integer) As Long
    'Declare Function ri1260_59_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal mux As Integer, ByVal relay As Integer) As Long
    'Declare Function ri1260_60_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal grp As Integer, ByVal relay As Integer) As Long
    'Declare Function ri1260_64_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal grp As Integer, ByVal relay As Integer) As Long
    'Declare Function ri1260_66_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal switch_num As Integer, ByVal pole As Integer) As Long
    'Declare Function ri1260_75_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal grp As Integer, ByVal relay As Integer) As Long
    'Declare Function ri1260_93_operate_single Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module As Integer, ByVal operation As Integer, ByVal grp As Integer, ByVal relay As Integer) As Long
    'Declare Function ri1260_read_status_byte Lib "RI1260.DLL" (ByVal Vi As Long, response As Integer) As Long
    'Declare Function ri1260_read_relay_states Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module_no As Integer, mod_type As Integer, states As Integer) As Long
    'Declare Function ri1260_read_card_types Lib "RI1260.DLL" (ByVal Vi As Long, module_type As Integer) As Long
    'Declare Function ri1260_def_port_modes Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module_no As Integer, ByVal port_io_bitmask As Integer) As Long
    'Declare Function ri1260_set_sync_mode Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module_no As Integer, ByVal last_sync_port As Integer) As Long
    'Declare Function ri1260_handshake_polarity Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module_no As Integer, ByVal clkin As Integer, ByVal busy As Integer) As Long
    'Declare Function ri1260_read_digio_conf Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module_no As Integer, io_bitmask As Integer, last_sync_port As Integer, arm_state As Integer, clkin As Integer, busy As Integer) As Long
    'Declare Function ri1260_setup_sync_read Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module_no As Integer, ByVal port As Integer, ByVal data_length As Integer, ByVal max_data As Integer) As Long
    'Declare Function ri1260_setup_sync_write Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module_no As Integer, ByVal port As Integer, ByVal data_length As Integer, ByVal num_data As Integer, data_array As Long) As Long
    'Declare Function ri1260_arm_digio Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module_no As Integer, ByVal arm_or_disarm As Integer) As Long
    'Declare Function ri1260_read_sync_data Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module_no As Integer, ByVal port As Integer, ByVal max_data As Integer, num_read As Integer, data_array As Long) As Long
    'Declare Function ri1260_async_read Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module_no As Integer, ByVal port As Integer, ByVal data_length As Integer, data_item As Long) As Long
    'Declare Function ri1260_async_write Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module_no As Integer, ByVal port As Integer, ByVal data_length As Integer, data_item As Long) As Long
    'Declare Function ri1260_async_bit_write Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module_no As Integer, ByVal port As Integer, ByVal high_bits As Integer, ByVal low_bits As Integer) As Long
    'Declare Function ri1260_run_synchronous_test Lib "RI1260.DLL" (ByVal Vi As Long, ByVal module As Integer, ByVal test_timeout As Integer) As Long
    'Declare Function ri1260_find1260 Lib "RI1260.DLL" (ByVal max_count As Integer, ret_count As Long, instr_type As Integer, instr_num As Integer, logical_address As Integer, slot As Integer) As Long
    'Declare Function ri1260_closeAllRMSessions Lib "RI1260.DLL" () As Long


End Module